[gd_scene load_steps=3 format=3 uid="uid://d3vr1ww3o1jns"]

[ext_resource type="Texture2D" uid="uid://ccuqvqrqoy3bc" path="res://Assets/Art/Tela inicial do jogo mobile png.png" id="1_1503t"]
[ext_resource type="Script" uid="uid://0repr8skag47" path="res://Assets/Scripts/login_script.gd" id="1_w36li"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w36li")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_1503t")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 306.0
offset_top = -110.5
offset_right = -306.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2

[node name="username" type="LineEdit" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Digite o nome de usu√°rio"
alignment = 1

[node name="password" type="LineEdit" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Digite a senha"
alignment = 1
secret = true

[node name="login_button" type="Button" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Login"

[node name="FeedbackText" type="Label" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.863388, 0.355126, 0.0720554, 1)
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="signup_button" type="LinkButton" parent="TextureRect/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sign Up"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="TextureRect/VBoxContainer/login_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/signup_button" to="." method="_on_signup_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
